...
		LanguageReference(name = "Common Sign Language", group = "Standard", roll = "1"),
		LanguageReference(name = "Draconic", group = "Standard", roll = "2"),
		LanguageReference(name = "Dwarvish", group = "Standard", roll = "3–4"),
		LanguageReference(name = "Elvish", group = "Standard", roll = "5–6"),
		LanguageReference(name = "Giant", group = "Standard", roll = "7"),
		LanguageReference(name = "Gnomish", group = "Standard", roll = "8"),
		LanguageReference(name = "Goblin", group = "Standard", roll = "9"),
		LanguageReference(name = "Halfling", group = "Standard", roll = "10–11"),
		LanguageReference(name = "Orc", group = "Standard", roll = "12")
	)

	val RARE_LANGUAGES = listOf(
		LanguageReference(name = "Abyssal", group = "Rare"),
...
		"8–9" to "−1",
		"10–11" to "+0",
		"12–13" to "+1",
		"14–15" to "+2",
		"16–17" to "+3",
		"18–19" to "+4",
		"20–21" to "+5",
		"22–23" to "+6",
		"24–25" to "+7",
		"26–27" to "+8",
		"28–29" to "+9",
		"30" to "+10"
	)

	val CHARACTER_CREATION_TABLES = listOf(
		ReferenceTable(
			title = "Class Overview",
			columns = listOf("Class", "Likes", "Primary Ability", "Complexity"),
...
